--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gifenc": "^1.0.3",
     "maxstache": "^1.0.7",
     "mp4-wasm": "^1.0.3",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "svelte-hmr": "^0.14.4"
   },
   "type": "module",
   "scripts": {
